--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.8.3",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
@@ -16,6 +17,8 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-simple-star-rating": "^4.0.5",
+    "reactfire": "^4.2.1",
+    "tslib": "^2.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
