--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-simple-star-rating": "^4.0.5",
+    "react-slick": "^0.29.0",
     "reactfire": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.4.0",
     "web-vitals": "^2.1.4"
   },
