--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vgtracker",
-  "version": "0.4.4",
+  "version": "0.4.5",
   "private": true,
   "dependencies": {
     "@dnd-kit/core": "^6.0.5",
@@ -14,6 +14,7 @@
     "firebase": "^9.9.1",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
+    "react-animated-number": "^0.4.4",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
@@ -24,6 +25,7 @@
     "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.29.0",
     "reactfire": "^4.2.1",
+    "recharts": "^2.1.13",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.4.0",
     "web-vitals": "^2.1.4"
