--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Dependencies
         run: npm install --legacy-peer-deps
       - name: Build
-        run: npm run build-prod
+        run: yarn build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
