--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.1.3",
     "firebase": "^9.9.1",
     "node-sass": "^7.0.1",
@@ -28,6 +32,7 @@
     "recharts": "^2.1.13",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.4.0",
+    "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
