--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "firebase": "^9.9.1",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
-    "react-animated-number": "^0.4.4",
+    "react-animated-numbers": "^0.16.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
