--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.1.3",
     "firebase": "^9.9.1",
-    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-animated-numbers": "^0.16.0",
     "react-bootstrap": "^2.3.1",
@@ -30,6 +29,7 @@
     "react-slick": "^0.29.0",
     "reactfire": "^4.2.1",
     "recharts": "^2.1.13",
+    "sass": "^1.79.4",
     "slick-carousel": "^1.8.1",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3",
@@ -58,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
