--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vgtracker",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "private": true,
   "dependencies": {
     "@dnd-kit/core": "^6.0.5",
@@ -27,6 +27,7 @@
     "react-select": "^5.3.2",
     "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.29.0",
+    "react-spring-bottom-sheet": "^3.4.1",
     "reactfire": "^4.2.1",
     "recharts": "^2.1.13",
     "sass": "^1.79.4",
