--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vgtracker",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "private": true,
   "dependencies": {
     "@dnd-kit/core": "^6.0.5",
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.1.3",
     "firebase": "^9.9.1",
+    "keen-slider": "^6.8.6",
     "react": "^18.1.0",
     "react-animated-numbers": "^0.16.0",
     "react-bootstrap": "^2.3.1",
@@ -26,12 +27,10 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-simple-star-rating": "^4.0.5",
-    "react-slick": "^0.29.0",
     "react-spring-bottom-sheet": "^3.4.1",
     "reactfire": "^4.2.1",
     "recharts": "^2.1.13",
     "sass": "^1.79.4",
-    "slick-carousel": "^1.8.1",
     "tslib": "^2.4.0",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
