--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Video Games Tracking made simple",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "icons/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo_vg_new_512.png",
+      "src": "icons/icon_192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo_vg_new_512.png",
+      "src": "icons/icon_512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
